@@ -7,6 +7,7 @@ Release 0.56 -
  - Right justify numerical tabular html output (Sébastien Aperghis-Tramoni).
  - Work around ExtUtils::MakeMaker realclean bug (Florian Ragwitz) (rt 17324).
  - Don't try to delete db if it isn't there.
+ - No longer create the temporary .version files (Leon Brocard)
 
 Release 0.55 - 22nd September 2005
  - Add -gcov option to cover and make it default when using gcc.
